ffi/poc/cpp/corpus/include/ak_abi.h

/* ---- section 4: common vocabulary (plan.FIXED) --------------------------------- */
typedef struct ak_enc_ctx ak_enc_ctx;
typedef struct ak_dec_ctx ak_dec_ctx;
/* ABI v1 section 4: source code units -> UTF-8 into dst; returns bytes written or an error. */
typedef int32_t (*ak_transcode_fn)(const void *src, size_t len, uint8_t *dst, int32_t cap, ak_grow_fn grow, void *sink);
/* ABI v1 section 6: a host-driven loop over one repeated/packed/map field. */
typedef int32_t (*ak_loop_f)(ak_enc_ctx *ctx, const void *obj, int64_t token);
/* ABI v1 section 4, encode: a blob as DATA in the group. `len` counts SOURCE code units; `tc == NULL` means the field is ABSENT. */
struct ak_str {
  const void *data;
  size_t len;
  ak_transcode_fn tc;
};
typedef struct ak_str ak_str;
/* Decision 11's unknown-field bag: two words, raw tag-and-value runs. */
struct ak_blob {
  const void *data;
  size_t len;
};
typedef struct ak_blob ak_blob;
/* Decode group for `TaskOptionsOptionsEntry`. */
struct ak_dfix_TaskOptionsOptionsEntry {
  struct ak_span key;
  struct ak_span value;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `Timestamp`. */
struct ak_efix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Decode group for `Timestamp`. */
struct ak_dfix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `Timestamp`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `Duration`. */
struct ak_efix_Duration {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Decode group for `Duration`. */
struct ak_dfix_Duration {
  int64_t seconds;
  int32_t nanos;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `Duration`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_Duration {
  int64_t seconds;
  int32_t nanos;
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `ResultRaw`. */
struct ak_efix_ResultRaw {
  struct ak_str session_id;
  struct ak_str name;
  struct ak_str owner_task_id;
  int32_t status;
  struct ak_efix_Timestamp created_at;
  struct ak_efix_Timestamp completed_at;
  struct ak_str result_id;
  int64_t size;
  struct ak_str created_by;
  struct ak_str opaque_id;
  uint8_t manual_deletion;
  uint32_t presence;
};
/* Decode group for `ResultRaw`. */
struct ak_dfix_ResultRaw {
  struct ak_span session_id;
  struct ak_span name;
  struct ak_span owner_task_id;
  int32_t status;
  struct ak_dfix_Timestamp created_at;
  struct ak_dfix_Timestamp completed_at;
  struct ak_span result_id;
  int64_t size;
  struct ak_span created_by;
  struct ak_span opaque_id;
  uint8_t manual_deletion;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `ResultRaw`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_ResultRaw {
  struct ak_str session_id;
  struct ak_str name;
  struct ak_str owner_task_id;
  int32_t status;
  struct ak_ufix_Timestamp created_at;
  struct ak_ufix_Timestamp completed_at;
  struct ak_str result_id;
  int64_t size;
  struct ak_str created_by;
  struct ak_str opaque_id;
  uint8_t manual_deletion;
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `TaskOptions`. */
struct ak_efix_TaskOptions {
  struct ak_efix_Duration max_duration;
  int32_t max_retries;
  int32_t priority;
  struct ak_str partition_id;
  struct ak_str application_name;
  struct ak_str application_version;
  struct ak_str application_namespace;
  struct ak_str application_service;
  struct ak_str engine_type;
  uint32_t presence;
};
/* Decode group for `TaskOptions`. */
struct ak_dfix_TaskOptions {
  struct ak_dfix_Duration max_duration;
  int32_t max_retries;
  int32_t priority;
  struct ak_span partition_id;
  struct ak_span application_name;
  struct ak_span application_version;
  struct ak_span application_namespace;
  struct ak_span application_service;
  struct ak_span engine_type;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `TaskOptions`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_TaskOptions {
  struct ak_ufix_Duration max_duration;
  int32_t max_retries;
  int32_t priority;
  struct ak_str partition_id;
  struct ak_str application_name;
  struct ak_str application_version;
  struct ak_str application_namespace;
  struct ak_str application_service;
  struct ak_str engine_type;
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `TaskOutput`. */
struct ak_efix_TaskOutput {
  uint8_t success;
  struct ak_str error;
  uint32_t presence;
};
/* Decode group for `TaskOutput`. */
struct ak_dfix_TaskOutput {
  uint8_t success;
  struct ak_span error;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `TaskOutput`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_TaskOutput {
  uint8_t success;
  struct ak_str error;
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode vtable for `Timestamp`. */
struct ak_evt_Timestamp {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `Timestamp` (the push family, ABI v1 section 7.1). */
struct ak_dvt_Timestamp {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_Timestamp *);
};
/* Encode vtable for `Duration`. */
struct ak_evt_Duration {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `Duration` (the push family, ABI v1 section 7.1). */
struct ak_dvt_Duration {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_Duration *);
};
/* Encode vtable for `ResultRaw`. */
struct ak_evt_ResultRaw {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `ResultRaw` (the push family, ABI v1 section 7.1). */
struct ak_dvt_ResultRaw {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ResultRaw *);
};
/* Encode vtable for `TaskOptions`. */
struct ak_evt_TaskOptions {
  ak_loop_f loop_options;
};
/* Decode vtable for `TaskOptions` (the push family, ABI v1 section 7.1). */
struct ak_dvt_TaskOptions {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_TaskOptions *);
  void (*add_options)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_TaskOptionsOptionsEntry *, int32_t);
};
/* Encode vtable for `TaskOutput`. */
struct ak_evt_TaskOutput {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `TaskOutput` (the push family, ABI v1 section 7.1). */
struct ak_dvt_TaskOutput {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_TaskOutput *);
};
/* ABI v1 section 6: what the host calls are PLAIN EXPORTS, not a table. */
intptr_t ak_encode_Timestamp(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_Timestamp *vt, const struct ak_efix_Timestamp *fix);
intptr_t ak_uencode_Timestamp(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_Timestamp *vt, const struct ak_ufix_Timestamp *fix);
int32_t ak_decode_Timestamp(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_Timestamp *vt);
int32_t ak_parse_Timestamp(ak_dec_ctx *ctx, const uint8_t *buf, size_t len);
intptr_t ak_encode_Duration(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_Duration *vt, const struct ak_efix_Duration *fix);
intptr_t ak_uencode_Duration(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_Duration *vt, const struct ak_ufix_Duration *fix);
int32_t ak_decode_Duration(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_Duration *vt);
int32_t ak_parse_Duration(ak_dec_ctx *ctx, const uint8_t *buf, size_t len);
intptr_t ak_encode_ResultRaw(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_ResultRaw *vt, const struct ak_efix_ResultRaw *fix);
intptr_t ak_uencode_ResultRaw(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_ResultRaw *vt, const struct ak_ufix_ResultRaw *fix);
int32_t ak_decode_ResultRaw(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_ResultRaw *vt);
int32_t ak_parse_ResultRaw(ak_dec_ctx *ctx, const uint8_t *buf, size_t len);
intptr_t ak_encode_TaskOptions(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_TaskOptions *vt, const struct ak_efix_TaskOptions *fix);
intptr_t ak_uencode_TaskOptions(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_TaskOptions *vt, const struct ak_ufix_TaskOptions *fix);
int32_t ak_decode_TaskOptions(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_TaskOptions *vt);
int32_t ak_parse_TaskOptions(ak_dec_ctx *ctx, const uint8_t *buf, size_t len);
intptr_t ak_encode_TaskOutput(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_TaskOutput *vt, const struct ak_efix_TaskOutput *fix);
intptr_t ak_uencode_TaskOutput(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_TaskOutput *vt, const struct ak_ufix_TaskOutput *fix);
int32_t ak_decode_TaskOutput(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_TaskOutput *vt);
int32_t ak_parse_TaskOutput(ak_dec_ctx *ctx, const uint8_t *buf, size_t len);
int32_t ak_blob_run(ak_enc_ctx *ctx, const struct ak_str *elems, int32_t n);
int32_t ak_run_i32(ak_enc_ctx *ctx, const int32_t *p, size_t n);
int32_t ak_run_i64(ak_enc_ctx *ctx, const int64_t *p, size_t n);
int32_t ak_run_f64(ak_enc_ctx *ctx, const double *p, size_t n);
int32_t ak_run_u8(ak_enc_ctx *ctx, const uint8_t *p, size_t n);
int32_t ak_bdr_ptr(ak_dec_ctx *ctx, const uint8_t * *ptr, size_t *len);
void ak_bdr_reset(ak_dec_ctx *ctx);
/* Counting build: the host reports the forward crossings of a drain loop. */
void ak_bdr_count_forward(ak_dec_ctx *ctx, uint32_t n);
/* layout */
/* ABI v1 section 10: the core's own view of every group layout. */
size_t ak_layout_facts(uint32_t *out, size_t cap);