ffi/poc/csharp/src/Corpus/Generated/Abi.cs

#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_bdr_ptr(IntPtr ctx, byte** ptr, nuint* len);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_bdr_reset(IntPtr ctx);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_bdr_reset(IntPtr ctx);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_bdr_count_forward(IntPtr ctx, uint n);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_bdr_count_forward(IntPtr ctx, uint n);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nuint ak_layout_facts(uint* @out, nuint cap);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nuint ak_layout_facts(uint* @out, nuint cap);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_blob_run(IntPtr ctx, ak_str* elems, int n);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_blob_run(IntPtr ctx, ak_str* elems, int n);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_run_i32(IntPtr ctx, int* p, nuint n);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_run_i32(IntPtr ctx, int* p, nuint n);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_run_i64(IntPtr ctx, long* p, nuint n);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_run_i64(IntPtr ctx, long* p, nuint n);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_run_f64(IntPtr ctx, double* p, nuint n);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_run_f64(IntPtr ctx, double* p, nuint n);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_run_u8(IntPtr ctx, byte* p, nuint n);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_run_u8(IntPtr ctx, byte* p, nuint n);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_encode_Timestamp(void* obj, IntPtr ctx, ak_evt_Timestamp* vt, ak_efix_Timestamp* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_encode_Timestamp(void* obj, IntPtr ctx, ak_evt_Timestamp* vt, ak_efix_Timestamp* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_uencode_Timestamp(void* obj, IntPtr ctx, ak_evt_Timestamp* vt, ak_ufix_Timestamp* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_uencode_Timestamp(void* obj, IntPtr ctx, ak_evt_Timestamp* vt, ak_ufix_Timestamp* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_decode_Timestamp(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_Timestamp* vt);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_decode_Timestamp(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_Timestamp* vt);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_parse_Timestamp(IntPtr ctx, byte* buf, nuint len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_parse_Timestamp(IntPtr ctx, byte* buf, nuint len);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_encode_Duration(void* obj, IntPtr ctx, ak_evt_Duration* vt, ak_efix_Duration* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_encode_Duration(void* obj, IntPtr ctx, ak_evt_Duration* vt, ak_efix_Duration* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_uencode_Duration(void* obj, IntPtr ctx, ak_evt_Duration* vt, ak_ufix_Duration* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_uencode_Duration(void* obj, IntPtr ctx, ak_evt_Duration* vt, ak_ufix_Duration* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_decode_Duration(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_Duration* vt);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_decode_Duration(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_Duration* vt);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_parse_Duration(IntPtr ctx, byte* buf, nuint len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_parse_Duration(IntPtr ctx, byte* buf, nuint len);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_encode_ResultRaw(void* obj, IntPtr ctx, ak_evt_ResultRaw* vt, ak_efix_ResultRaw* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_encode_ResultRaw(void* obj, IntPtr ctx, ak_evt_ResultRaw* vt, ak_efix_ResultRaw* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_uencode_ResultRaw(void* obj, IntPtr ctx, ak_evt_ResultRaw* vt, ak_ufix_ResultRaw* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_uencode_ResultRaw(void* obj, IntPtr ctx, ak_evt_ResultRaw* vt, ak_ufix_ResultRaw* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_decode_ResultRaw(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ResultRaw* vt);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_decode_ResultRaw(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ResultRaw* vt);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_parse_ResultRaw(IntPtr ctx, byte* buf, nuint len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_parse_ResultRaw(IntPtr ctx, byte* buf, nuint len);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_encode_TaskOptions(void* obj, IntPtr ctx, ak_evt_TaskOptions* vt, ak_efix_TaskOptions* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_encode_TaskOptions(void* obj, IntPtr ctx, ak_evt_TaskOptions* vt, ak_efix_TaskOptions* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_uencode_TaskOptions(void* obj, IntPtr ctx, ak_evt_TaskOptions* vt, ak_ufix_TaskOptions* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_uencode_TaskOptions(void* obj, IntPtr ctx, ak_evt_TaskOptions* vt, ak_ufix_TaskOptions* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_decode_TaskOptions(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_TaskOptions* vt);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_decode_TaskOptions(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_TaskOptions* vt);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_parse_TaskOptions(IntPtr ctx, byte* buf, nuint len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_parse_TaskOptions(IntPtr ctx, byte* buf, nuint len);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_encode_TaskOutput(void* obj, IntPtr ctx, ak_evt_TaskOutput* vt, ak_efix_TaskOutput* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_encode_TaskOutput(void* obj, IntPtr ctx, ak_evt_TaskOutput* vt, ak_efix_TaskOutput* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_uencode_TaskOutput(void* obj, IntPtr ctx, ak_evt_TaskOutput* vt, ak_ufix_TaskOutput* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_uencode_TaskOutput(void* obj, IntPtr ctx, ak_evt_TaskOutput* vt, ak_ufix_TaskOutput* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_decode_TaskOutput(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_TaskOutput* vt);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_decode_TaskOutput(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_TaskOutput* vt);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_parse_TaskOutput(IntPtr ctx, byte* buf, nuint len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_parse_TaskOutput(IntPtr ctx, byte* buf, nuint len);
